--- a/python/src/Student_doc.i.in
+++ b/python/src/Student_doc.i.in
@@ -74,6 +74,23 @@ The first moments of the distribution are:
                           \quad \text{ if }\nu>2
     \end{eqnarray*}
 
+The CDF is computed using several algorithms, depending on the dimension of the distribution:
+
+- In dimension 1, it is done using boost algorithm or the incomplete
+  regularized beta function if boost is not available;
+- In dimension 2, it is done using an integration in dimension 1 of a
+  dedicated kernel;
+- In dimension 3 to the value given by the entry *Student-SmallDimension* of
+  :class:`~openturns.ResourceMap`, it is done using the generic algorithm for
+  unimodal distributions. This algorithm is controlled by a positive scale
+  given by the entry *Student-CDFScaleFactor* of
+  :class:`~openturns.ResourceMap`.
+- In dimension greater than the entry *Student-SmallDimension* of
+  :class:`~openturns.ResourceMap`, it is done using a Monte Carlo estimation
+  controlled by the *Student-MinimumCDFEpsilon*,
+  *Student-MinimumNumberOfPoints* and *Student-MaximumNumberOfPoints* entries
+  of :class:`~openturns.ResourceMap`.
+
 Examples
 --------
 Create a distribution:
