--- a/python/src/Normal_doc.i.in
+++ b/python/src/Normal_doc.i.in
@@ -63,11 +63,21 @@ The first moments of the distribution are:
     \end{eqnarray*}
 
 The CDF is computed using several algorithms, depending on the dimension of the distribution:
-  - In dimension 1, it is done using the implementation of the complementary error function developed by Steven G. Johnson, Massachusetts Institute of Technology;
-  - In any dimension, it is done as the product of 1D marginal CDFs if the components are independent;
-  - In dimension 2 and 3, it is done using an integration in dimension 1 or 2 of a dedicated kernel;
-  - In dimension 4 to the value given by the entry *Normal-SmallDimension* of :class:`~openturns.ResourceMap`, it is done using the adaptive integration algorithm :class:`~openturns.IteratedQuadrature`.
-  - In dimension greater than the entry *Normal-SmallDimension* of :class:`~openturns.ResourceMap`, it is done using a Monte Carlo estimation controlled by the *Normal-MinimumCDFEpsilon*, *Normal-MinimumNumberOfPoints* and *Normal-MaximumNumberOfPoints* entries of :class:`~openturns.ResourceMap`.
+
+- In dimension 1, it is done using the implementation of the complementary
+  error function developed by Steven G. Johnson, Massachusetts Institute of
+  Technology;
+- In any dimension, it is done as the product of 1D marginal CDFs if the
+  components are independent;
+- In dimension 2 and 3, it is done using an integration in dimension 1 or 2 of
+  a dedicated kernel;
+- In dimension 4 to the value given by the entry *Normal-SmallDimension* of
+  :class:`~openturns.ResourceMap`, it is done using the adaptive integration
+  algorithm :class:`~openturns.IteratedQuadrature`.
+- In dimension greater than the entry *Normal-SmallDimension* of
+  :class:`~openturns.ResourceMap`, it is done using a Monte Carlo estimation
+  controlled by the *Normal-MinimumCDFEpsilon*, *Normal-MinimumNumberOfPoints*
+  and *Normal-MaximumNumberOfPoints* entries of :class:`~openturns.ResourceMap`.
 										Examples
 --------
 Create a distribution:
