--- a/python/src/OptimizationAlgorithmImplementation_doc.i.in
+++ b/python/src/OptimizationAlgorithmImplementation_doc.i.in
@@ -163,6 +163,20 @@ OT_OptimizationAlgorithm_getStartingPoint_doc
 
 // ---------------------------------------------------------------------
 
+%define OT_OptimizationAlgorithm_getStartingSample_doc
+"Accessor to starting sample.
+
+Returns
+-------
+startingSample : :class:`~openturns.Sample`
+    Starting sample."
+
+%enddef
+%feature("docstring") OT::OptimizationAlgorithmImplementation::getStartingSample
+OT_OptimizationAlgorithm_getStartingSample_doc
+
+// ---------------------------------------------------------------------
+
 %define OT_OptimizationAlgorithm_run_doc
 "Launch the optimization."
 %enddef
@@ -296,6 +310,19 @@ startingPoint : :class:`~openturns.Point`
 %feature("docstring") OT::OptimizationAlgorithmImplementation::setStartingPoint
 OT_OptimizationAlgorithm_setStartingPoint_doc
 
+// ---------------------------------------------------------------------
+
+%define OT_OptimizationAlgorithm_setStartingSample_doc
+"Accessor to starting sample.
+
+Parameters
+----------
+startingSample : :class:`~openturns.Sample`
+    Starting sample."
+%enddef
+
+%feature("docstring") OT::OptimizationAlgorithmImplementation::setStartingSample
+OT_OptimizationAlgorithm_setStartingSample_doc
 // ---------------------------------------------------------------------
 
 %define OT_OptimizationAlgorithm_setProgressCallback_doc
